<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/nav_news"
        android:title="@string/title_news"/>
    <item
        android:id="@+id/nav_culture"
        android:title="@string/title_culture"/>
    <item
        android:id="@+id/nav_entertainment"
        android:title="@string/title_entertainment"/>
    <item
        android:id="@+id/nav_military"
        android:title="@string/title_military"/>
    <item
        android:id="@+id/nav_women"
        android:title="@string/title_women"/>
    <item
        android:id="@+id/nav_nature"
        android:title="@string/title_nature"/>
    <item
        android:id="@+id/nav_food"
        android:title="@string/title_food"/>
    <item
        android:id="@+id/nav_history"
        android:title="@string/title_history"/>
    <item
        android:id="@+id/nav_videos"
        android:title="@string/title_videos"/>
    <item
        android:id="@+id/nav_opinion"
        android:title="@string/title_opinion"/>

</menu>